# DevInventory

./: .gitignore  AGENTS.md  Cargo.toml
docs/: PLAN.md  REFACTORING.md  SECURITY.md  USAGE.md
src/: cli.rs  config.rs  crypto.rs  crypto_service.rs  db.rs  domain.rs  keymgr.rs  main.rs  service.rs
src/ui/: cli.rs  common.rs  mod.rs
