[package]
name = "DevInventory"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1", features = ["alloc"] }
chrono = { version = "0.4.42", features = ["serde", "clock"] }
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
keyring = "3.6.3"
rand = "0.9.2"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "chrono", "uuid"] }
tabled = "0.20.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
log = "0.4.22"
env_logger = "0.11.6"

[dev-dependencies]
tempfile = "3.23.0"
